deploy/overlays/dev/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: blog-dev
  labels:
    kargo.akuity.io/project: "true"
